Code header of html file

--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/style.css">
-  
+
   <title>Frontend Mentor | Notifications page</title>
 
 </head>
+
 <body>
+  <header>
+    <h1>Notifications</h1>
+    <div class="unread-count">3</div>
+    <div class="mark-as-read">Mark all as read</div>
+    
+  </header>
+  <main>
+    Mark Webber reacted to your recent post My first tournament today!
+    1m ago
 
-  Notifications 3
+    Angela Gray followed you
+    5m ago
 
-  Mark all as read
+    Jacob Thompson has joined your group Chess Club
+    1 day ago
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
+    Rizky Hasanuddin sent you a private message
+    5 days ago
+    Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
+    I'm already having lots of fun and improving my game.
 
-  Angela Gray followed you
-  5m ago
+    Kimberly Smith commented on your picture
+    1 week ago
 
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
+    Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
+    2 weeks ago
 
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
+    Anna Kim left the group Chess Club
+    2 weeks ago
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
