Finish initial html code

--- a/index.html
+++ b/index.html
@@ -19,36 +19,80 @@
     <h1>Notifications</h1>
     <div class="unread-count">3</div>
     <div class="mark-as-read">Mark all as read</div>
-    
+
   </header>
   <main>
-    Mark Webber reacted to your recent post My first tournament today!
-    1m ago
+    <div class="card unread">
+      <img src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber Avatar">
+      <div class="name">Mark Webber </div>
+      <div class="action">reacted to your recent post </div>
+      <div class="group-post">My first tournament today!</div>
+      <div class="unread-dot"></div>
+      <div class="time-posted">1m ago</div>
+      <div class="private-message hidden"></div>
+    </div>
+    <div class="card unread">
+      <img src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray Avatar">
+      <div class="name">Angela Gray </div>
+      <div class="action">followed you</div>
+      <div class="group-post hidden"></div>
+      <div class="unread-dot"></div>
+      <div class="time-posted"> 5m ago</div>
+      <div class="private-message hidden"></div>
+    </div>
+    <div class="card unread">
+      <img src="./assets/images/avatar-jacob-thompson.webp" alt="Jacob Thompson Avatar">
+      <div class="name">Jacob Thompson </div>
+      <div class="action">has joined your group </div>
+      <div class="group-post">Chess Club</div>
+      <div class="unread-dot"></div>
+      <div class="time-posted">1 day ago</div>
+      <div class="private-message hidden"></div>
+    </div>
+    <div class="card">
+      <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin Avatar">
+      <div class="name">Rizky Hasanuddin </div>
+      <div class="action">sent you a private message </div>
+      <div class="group-post hidden"></div>
+      <div class="unread-dot hidden"></div>
+      <div class="time-posted">5 days ago</div>
+      <div class="private-message">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</div>
+    </div>
+    <div class="card">
+      <img src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith Avatar">
+      <div class="name">Kimberly Smith </div>
+      <div class="action">commented on your picture </div>
+      <div class="group-post hidden"></div>
+      <div class="unread-dot hidden"></div>
+      <div class="time-posted">1 week ago</div>
+      <img src="./assets/images/image-chess.webp" alt="Image of a girl playing chess">
+      <div class="private-message hidden"></div>
+    </div>
+    <div class="card">
+      <img src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson Avatar">
+      <div class="name">Nathan Peterson </div>
+      <div class="action">reacted to your recent post </div>
+      <div class="group-post">5 end-game strategies to increase your win rate
+</div>
+      <div class="unread-dot hidden"></div>
+      <div class="time-posted">2 weeks ago</div>
+      <div class="private-message hidden"></div>
+    </div>
+    <div class="card">
+      <img src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim Avatar">
+      <div class="name">Anna Kim </div>
+      <div class="action">left the group </div>
+      <div class="group-post">Chess Club</div>
+      <div class="unread-dot hidden"></div>
+      <div class="time-posted">2 weeks ago</div>
+      <div class="private-message hidden"></div>
+    </div>
 
-    Angela Gray followed you
-    5m ago
-
-    Jacob Thompson has joined your group Chess Club
-    1 day ago
-
-    Rizky Hasanuddin sent you a private message
-    5 days ago
-    Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
-    I'm already having lots of fun and improving my game.
-
-    Kimberly Smith commented on your picture
-    1 week ago
-
-    Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-    2 weeks ago
-
-    Anna Kim left the group Chess Club
-    2 weeks ago
   </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Woodrow Martyr</a>.
     </div>
   </footer>
 
