--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/style.css">
 
@@ -56,7 +59,8 @@
       <div class="group-post hidden"></div>
       <div class="unread-dot hidden"></div>
       <div class="time-posted">5 days ago</div>
-      <div class="private-message">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</div>
+      <div class="private-message">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now
+        and I'm already having lots of fun and improving my game.</div>
     </div>
     <div class="card">
       <img src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith Avatar">
@@ -73,7 +77,7 @@
       <div class="name">Nathan Peterson </div>
       <div class="action">reacted to your recent post </div>
       <div class="group-post">5 end-game strategies to increase your win rate
-</div>
+      </div>
       <div class="unread-dot hidden"></div>
       <div class="time-posted">2 weeks ago</div>
       <div class="private-message hidden"></div>
