Style the header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
@@ -19,9 +19,11 @@
 
 <body>
   <header>
-    <h1>Notifications</h1>
-    <div class="unread-count">3</div>
-    <div class="mark-as-read">Mark all as read</div>
+    <div class="notifications">
+      <h1>Notifications</h1>
+      <div class="unread-count">3</div>
+    </div>
+    <button class="mark-as-read">Mark all as read</button>
 
   </header>
   <main>
