Fix image in Kimberly Smith card

--- a/index.html
+++ b/index.html
@@ -76,12 +76,15 @@
         <img class="avatar" src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith Avatar">
         <div class="right-section">
           <div class="description">
-            <p><span class="name">Kimberly Smith</span>&nbsp;&nbsp;<span class="action">commented on your picture</span>
-            </p>
+            <div>
+              <p><span class="name">Kimberly Smith</span>&nbsp;&nbsp;<span class="action">commented on your
+                  picture</span>
+              </p>
+              <div class="time-posted">1 week ago</div>
+            </div>
+            <img class="my-picture" src="./assets/images/image-chess.webp" alt="Image of a girl playing chess">
           </div>
-          <div class="time-posted">1 week ago</div>
         </div>
-        <img class="my-picture" src="./assets/images/image-chess.webp" alt="Image of a girl playing chess">
       </div>
       <div class="card">
         <img class="avatar" src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson Avatar">
