--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Woodrow Martyr</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/wmartyr">Woodrow Martyr</a>.
     </div>
   </footer>
 
