--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./styles/style.css">
+  <script src="./scripts/script.js" defer></script>
 
   <title>Frontend Mentor | Notifications page</title>
 
