Code button to mark all as read

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="top-section">
       <div class="notifications">
         <h1>Notifications</h1>
-        <div class="unread-count">3</div>
+        <div class="unread-count"></div>
       </div>
       <button class="mark-as-read">Mark all as read</button>
     </section>
